# zscript

./: .gitignore  .gitmodules  CMakeLists.txt  PLAN.md  PUBLISHING.md  TODO.md  hello.zs  oop_demo.zs  zscript.sln
.github/workflows/: ci-dev.yml  ci-prod.yml  ci.yml  development.yml  native-ci.yml  nuget-release.yml  nuget.yml  production.yml  release.yml  unity-ilcpp-smoke.yml  unity-plugin-package.yml  unity-test.yml
documentation/: Developer Guide.md  Overview.md  Welcome.md
documentation/getting-started/: CLI.md  Quick Start.md
documentation/integrations/: C++ Embedding.md  Unity Integration.md
documentation/reference/: Annotations, Tags, and Metadata.md  Language Reference.md  Standard Library Reference.md
fuzz/: fuzz_lexer_parser.cpp
fuzz/corpus/: 03_fn.zs  04_class.zs  05_match.zs  06_interp.zs  07_nullable.zs  08_generics.zs  09_try_catch.zs  10_lambda.zs  11_destructure.zs  12_delegate.zs  13_engine.zs  14_range.zs  15_multiret.zs  16_rawstring.zs  17_trait.zs  18_nested_calls.zs  19_unicode_str.zs  20_deeply_nested.zs
nuget/: ZScript.Native.csproj
nuget/src/: ZScriptEngine.cs  ZScriptValue.cs  ZsNative.cs
src/: ast.h  ast_dump.h  binding.h  chunk.cpp  chunk.h  compiler.cpp  compiler.h  dap.cpp  dap.h  filewatcher.cpp  filewatcher.h  gc.cpp  gc.h  hotpatch.cpp  hotpatch.h  json.h  lexer.cpp  lexer.h  lsp.cpp  lsp.h  main.cpp  module.cpp  module.h  parser.cpp  parser.h  token.cpp  token.h  value.h  vm.cpp  vm.h
src/unity/: zscript_c.cpp  zscript_c.h
tests/: test_c_api.cpp  test_classes.cpp  test_closures.cpp  test_collections.cpp  test_control_flow.cpp  test_delegates.cpp  test_error_handling.cpp  test_functions.cpp  test_gc_module.cpp  test_generics.cpp  test_hotpatch.cpp  test_io_os.cpp  test_lexer.cpp  test_operators.cpp  test_parser.cpp  test_phase3.cpp  test_phase4.cpp  test_stdlib.cpp  test_tags.cpp  test_vm.cpp
tools/: actions_cache_tool.sh  nunit3_to_junit.py  render_junit_summary.py  validate_link_xml.py
tools/UnityBindingGen/: AssemblyScanner.cs  CSharpDispatchWriter.cs  CppBindingWriter.cs  Program.cs  TypeInfo.cs  UnityBindingGen.csproj
tools/ZScriptExportGen/: ExportCodeWriter.cs  ExportScanner.cs  Program.cs  ZScriptExportGen.csproj
unity/: .npmignore  package.json
unity/Editor/: ZScript.Editor.asmdef  ZScriptEditorWatcher.cs  ZScriptEditorWindow.cs  ZScriptImporter.cs
unity/Runtime/: ZScript.Runtime.asmdef  ZScriptExport.cs  ZScriptModule.cs  ZScriptVM.cs  ZsComponentBridge.cs  ZsObjectPool.cs  ZsUGUIBindings.cs  ZsUnityBindings.cs  ZsUnityEvent.cs  ZsVM.cs  ZsValueHandle.cs
unity/Tests/EditMode/: ObjectPoolTests.cs  TagsAndAnnotationTests.cs  ZScriptTests.asmdef
unity/UnityProject/: .gitignore
unity/UnityProject/ProjectSettings/: ProjectSettings.asset  ProjectVersion.txt
unity/com.zscript.runtime/: link.xml  package.json
unity/com.zscript.runtime/Editor/: ZScript.Editor.asmdef  ZScriptEditorWatcher.cs  ZScriptEditorWindow.cs  ZScriptImporter.cs  ZsBuildScript.cs  ZsComponentBridgeEditor.cs  ZsExportGenerator.cs  ZsLinkXmlGenerator.cs  ZsSerializedFieldsEditor.cs
unity/com.zscript.runtime/Runtime/: IZScriptExport.cs  ZScript.Runtime.asmdef  ZScriptExport.cs  ZScriptModule.cs  ZScriptVM.cs  ZsAdapterRegistry.cs  ZsComponentBridge.cs  ZsCoroutineBridge.cs  ZsReflectionProxy.cs  ZsSerializedFields.cs  ZsUGUIBindings.cs  ZsUnityBindings.cs  ZsUnityEvent.cs  ZsVM.cs  ZsValueHandle.cs
unity/com.zscript.runtime/Tests/EditMode/: SerializedFieldsTests.cs  TagsAndAnnotationTests.cs  VMLifecycleTests.cs  ZScriptTests.asmdef
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: zscript.tmLanguage.json
